# ComfyUI-Easy-Use

./: .gitignore  .gitmodules  ComfyUI-Easy-Use.json  README.ZH_CN.md  README.en.md  README.md  __init__.py  install.bat  prestartup_script.py  pyproject.toml  repair_dependency_list.txt  requirements.txt
.github/: FUNDING.yml
.github/instructions/: v3.example.instructions.md  v3.migration.instructions.md  v3.reference.instructions.md
locales/en/: main.json  nodeDefs.json
locales/zh/: main.json  nodeDefs.json  settings.json
py/: adv_encode.py  api.py  config.py  deprecated.py  easyNodes.py  fooocus.py  image.py  layer_diffusion.py  lllite.py  log.py  logic.py  routes.py  scheduling_tcd.py  server.py  wildcards.py  xyplot.py
py/bitsandbytes_NF4/: __init__.py
py/brushnet/: __init__.py  model.py  model_patch.py  powerpaint_utils.py
py/dit/: __init__.py
py/dit/hunyuanDiT/: LICENSE-HYDIT  config.py  (+2 more)
py/dynamiCrafter/: __init__.py
py/dynamicCrafter/: __init__.py
py/fooocus/: __init__.py
py/human_parsing/: parsing_api.py  run_parsing.py
py/ic_light/: __init__.py  func.py
py/ipadapter/: __init__.py  attention_processor.py  utils.py
py/kolors/: loader.py  model_patch.py  text_encode.py
py/layer_diffuse/: __init__.py  attension_sharing.py  func.py  model.py
py/libs/: adv_encode.py  cache.py  chooser.py  conditioning.py  controlnet.py  fluxai.py  fooocus.py  image.py  loader.py  math.py  messages.py  sampler.py  stability.py  translate.py  utils.py  wildcards.py  xyplot.py
py/nodes/: adapter.py  api.py  deprecated.py  fix.py  image.py  inpaint.py  loaders.py  logic.py  pipe.py  prompt.py  samplers.py  seed.py  util.py  xyplot.py
resources/: fooocus_styles.json
tools/: convert_locale_format.py
web/css/: chooser.css  easy.css  groupmap.css  index.css  modelinfo.css  selector.css  sliderControl.css  theme.css  toolbar.css
web/js/: bookmark.js  easyDynamicWidgets.js  getset.js  image.js  poseEditor.js  seed.js
web/page/: index.html
web_version/v2/: easyuse.js
(+246 files in other folders)
